5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2571.log
== TEST (2019-06-08 14:20:27) 
-- CODE:
vetor = eval(input(""))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'Instituto_de_Computacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:21:32) 
-- CODE:
vetor = input("")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'Instituto_de_Computacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:21:38) 
-- CODE:
vetor = input("")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'Instituto_de_Computacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:25:19) 
-- CODE:
vetor = input("")

for s != "a" or s != "A" in vetor:
	print(vetor1)
	

-- ERROR:
File "XXXX", line 3
    for s != "a" or s != "A" in vetor:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:25:39) 
-- CODE:
vetor = input("")

for s in vetor if s != "a" or s != "A":
	print(vetor1)
	

-- ERROR:
File "XXXX", line 3
    for s in vetor if s != "a" or s != "A":
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:25:45) 
-- CODE:
vetor = input("")

for s in vetor if s != "a" or s != "A":
	
	print(vetor1)
	

-- ERROR:
File "XXXX", line 3
    for s in vetor if s != "a" or s != "A":
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:25:53) 
-- CODE:
vetor = input("")

for s in vetor if s != "a" or s != "A" :
	
	print(vetor1)
	

-- ERROR:
File "XXXX", line 3
    for s in vetor if s != "a" or s != "A" :
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:25:57) 
-- CODE:
vetor = input("")

for s in vetor if s != "a" or s != "A"
	
	print(vetor1)
	

-- ERROR:
File "XXXX", line 3
    for s in vetor if s != "a" or s != "A"
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:26:04) 
-- CODE:
vetor = input("")

for s in vetor: 
	if s != "a" or s != "A"
	
	print(vetor1)
	

-- ERROR:
File "XXXX", line 4
    if s != "a" or s != "A"
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:26:13) 
-- CODE:
vetor = input("")

for s in vetor: 
	if s != "a" or s != "A"
	print(vetor1)
	

-- ERROR:
File "XXXX", line 4
    if s != "a" or s != "A"
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:26:39) 
-- CODE:
ve1 = input("")

for s in ve1: 
	if s != "a" or s != "A":
		ve1
	print(ve1)
	

-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computacao-ICOMP-UFAM
Instituto_de_Computa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:27:29) 
-- CODE:
ve = input("")
ve1 = ""

for s in ve: 
	if s != "a" or s != "A":
		ve1[i] = ve[i]
print(ve)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ve1[i] = ve[i]
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:27:40) 
-- CODE:
ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1[i] = ve[i]
print(ve)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    ve1[i] = ve[i]
TypeError: 'str' object does not support item assignment
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:28:07) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve.replace = ve
print(ve)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:28:24) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve.replace = ve1
print(ve1)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:36:47) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 = ve
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:37:22) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve[i] = ve[i]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:37:35) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve[i] = ve1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:37:44) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 = ve[i]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:37:53) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:38:02) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:38:08) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:39:25) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1[i:i+1] += ve[i]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:39:38) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:40:35) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i:i+1] + " "
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:40:37) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i:i+1] + " "
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:40:50) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:40:54) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:41:03) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s != "a" or s != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:41:24) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i = 0

for s in ve: 
	if s[i] != "a" or s[i] != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:41:50) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve: 
	if s[i] != "a" or s[i] != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:42:16) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve: 
	if s[i] != "a" or s[i] != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:42:28) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s[i] != "a" or s[i] != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:42:32) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s[i] != "a" or s[i] != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:42:35) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s[i] != "a" or s[i] != "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:18) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if not s[i] == "a" or not s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:23) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if not s[i] == "a" or not s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:26) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if not s[i] == "a" or not s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:32) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if not s[i] == "a" or not s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:36) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if not s[i] == "a" or not s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:44:43) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if not s[i] == "a" or not s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:46:08) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if not s[i] == "a" or not s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:46:26) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s[i] == "a" or s[i] == "A":
		ve1 += ve[i:i+1] + ve[i+1]
	else:
		i+=1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:46:47) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s[i] == "a" or s[i] == "A":
		ve1 += ve[i:i+i]
	else:
		i += 1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:46:50) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s[i] == "a" or s[i] == "A":
		ve1 += ve[i:i+i]
	else:
		i += 1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:46:56) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s[i] == "a" or s[i] == "A":
		ve1 += ve[i:2*i]
	else:
		i += 1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:48:09) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
	else:
		i += 1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:48:10) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
	else:
		i += 1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:48:31) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
	else:
		i += 1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:48:42) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

for s in ve:
	i = 0
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
	else:
		i += 1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:49:20) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for s in ve:
	i = 0
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
	else:
		i += 1
	x = ve1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:50:03) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for s in ve:
	i = 0
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
	else:
		i += 1
	x += ve1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:51:03) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for s in ve:
	i = 0
	if s != "a" or s != "A":
		ve1 += ve[i:i+1]
	else:
		i += 1
	x = ve1 + ve1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:17:29) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for s in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1[i] = ve[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:17:41) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1[i] = ve[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:17:57) 
-- CODE:
from numpy import *

ve = input("")
ve1 = zeros(size(ve))
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1[i] = ve[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:18:27) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1[i] = ve[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:18:40) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 = ve[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:18:45) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:18:48) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:18:53) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:19:01) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 = ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:19:52) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 = ve[i]
	
	print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:19:58) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 = ve[i]
	
	print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:20:12) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 = ve[i]
	
	print(ve1+ve1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:20:23) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 = ve[i]
	
	print(ve1+ve1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:03) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
	print(ve1[i])
-- ERROR:
File "XXXX", line 11
    print(ve1[i])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:05) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
	print(ve1[i])
-- ERROR:
File "XXXX", line 11
    print(ve1[i])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:09) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
	print(ve1[i])
-- ERROR:
File "XXXX", line 11
    print(ve1[i])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:14) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
		print(ve1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:19) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
		print(ve1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:24) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
		print(ve1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:26) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
		print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:43) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
		print(ve1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:45) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		
		print(ve1[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:22) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
		print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:25) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
		print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:43) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
		print(ve1)
	else:
		i += 1
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:56) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
		print(ve1)
	else:
		i += 1
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:23:00) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
		print(ve1)
	else:
		i += 1
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:23:47) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
		ve1 = ve1 + ve[i]
	else:
		i += 1
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:23:55) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
			
		ve1 = ve1 + ve[i]
	else:
		i += 1
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:24:02) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
			
		ve1 = ve1 + ve[i]
	else:
		i += 1
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:30:38) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		ve1 = ve.replace(a,ve[i+1])
	
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:30:43) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		ve1 = ve.replace(a,ve[i+1])
	
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:30:45) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		ve1 = ve.replace(a,ve[i+1])
	
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:31:20) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		ve1 = ve.replace("a",ve[i+1])
	
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:31:27) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		ve1 = ve.replace("a",ve[i])
	
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:32:29) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:32:32) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:32:35) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:32:47) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(size(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
print(ve)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:33:07) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in ve:
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:55:01) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(len(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:55:11) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

for i in range(len(ve)):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:56:07) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""


while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
	else:
		i+=1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:56:16) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
	else:
		i+=1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:56:24) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
	else:
		i+=1
print(ve1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:59:12) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
	else:
		i += 1
	print("")
	
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:59:14) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
	else:
		i += 1
	print("")
	
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:59:42) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
	else:
		i += 1
	print(" " + ve1)
	
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:59:50) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		print(" " + ve1)
	else:
		i += 1
	
	
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:00:22) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		print(ve1)
	else:
		i += 1
	
	
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:00:29) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		print(ve1)
	else:
		i += 1
	
	
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:03:39) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		ve1 += ve[i]
		print(ve[i])
	else:
		i += 1
		
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:03:59) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		x = ve[i]
		print(x)
	else:
		i += 1
		
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:04:13) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a":
		x = ve[i]
		print(x)
	else:
		i += 1
		
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:04:27) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a":
		x = ve[i]
		print(x)
	
		
	
	i += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:05:16) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""

i=0

while i != len(ve):
	
	if ve[i] != "a":
		x = ve[i]
		print(x)
	
	i += 1
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:05:35) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a":
		x += ve[i]
		print(x)
	
	i += 1
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:05:50) 
-- CODE:
from numpy import *

ve = input("")
ve1 = ""
x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
0.936258
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:06:06) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a":
		x += ve[i]
	
	i += 1
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:06:15) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or ve[i] != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:06:28) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" or "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:06:36) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:06:42) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
1.13946
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:07:06) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
2.27829
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:07:08) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
1.78891
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:07:08) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
3.69429
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
-----------------------------
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:07:08) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
6.53407
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
-----------------------------
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:07:08) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
9.79279
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
-----------------------------
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:07:08) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)
-- EXECUTION TIME:
9.6034
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
-----------------------------
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:07:20) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:07:35) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] != "a" != "A":
		x += ve[i]
	
	i += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:09:29) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
	
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- ERROR:
File "XXXX", line 13
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:09:36) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
	
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- EXECUTION TIME:
0.578657
-- ERROR:
  File "/home/codebench/codes/1807/2571/main.py", line 13
    else:
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:09:39) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
	
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- ERROR:
File "XXXX", line 13
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:09:53) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
		
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- EXECUTION TIME:
0.812152
-- ERROR:
  File "/home/codebench/codes/1807/2571/main.py", line 13
    else:
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:09:54) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
		
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- ERROR:
File "XXXX", line 13
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:10:06) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:10:15) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- EXECUTION TIME:
1.03812
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:10:46) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if not ve[i] == "a" or not ve[i] == "A":
		
		x += ve[i]
	
	i += 1
	
print(x)

-- EXECUTION TIME:
0.967884
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computacao-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:11:01) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:11:05) 
-- CODE:
from numpy import *

ve = input("")

x = ""

i=0

while i != len(ve):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
	i += 1
	
print(x)

-- EXECUTION TIME:
1.10361
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:18:29) 
-- CODE:
from numpy import *

ve = input("")

x = ""

for i in range(size(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
print(x)

-- EXECUTION TIME:
1.27118
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
I
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:

-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:18:30) 
-- CODE:
from numpy import *

ve = input("")

x = ""

for i in range(size(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:18:47) 
-- CODE:
from numpy import *

ve = input("")

x = ""

for i in range(len(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:18:55) 
-- CODE:
from numpy import *

ve = input("")

x = ""

for i in range(len(ve)):
	
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
print(x)

-- EXECUTION TIME:
1.1833
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:56:58) 
-- CODE:
from numpy import *

ve = input("")

x = ""

for i in range(len(ve)):
	print(ve[i])
	if ve[i] == "a" or ve[i] == "A":
		a = 0
	else:
		x += ve[i]
	
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
